Cultibox (1.1.12) precise; urgency=low
    + Le choix du capteur n'apparait plus pour les types 'autre' et 'lampe'
    + Correction d'un bug javascript: on ne recherche plus les éléments de la seconde régulation si celle-ci est désactivée

-- Yann Genevois <yann.genevois@gmail.com> Wed Apr  3 11:32:52 CEST 2013


Cultibox (1.1.11) precise; urgency=low
    + Correction d'erreur d'affichage dans les légendes des graphes des programmes et des logs
    + L'affichage des programmes dans les logs est maintenant synchronisé en fonction du type: les ventilateurs et radiateurs sont synchronisés avec l'affichage des températures par exemple 
    + Correction de typos
    + Mise en forme des panneaux d'informations et de warning/erreurs
    + Fusion des deux css cultibox.css et calagan.css en un seul: cultibox.css
    + L'algorithme de calcul du coût ne prend plus en compte les prises désactivées
    + Gestion de l'upgrade pour Mac Os X
    + Vérification de la possibilité d'écrire sur la carte SD avant de modifier les fichiers de conf
    + Le programme selectionné pour modification ne peut plus être déselectionné
    + Correction des requettes d'import des valeurs 'power': on vérufie que c'est bien un type numérique avant l'import
    + Possibilité de mettre la tolérance à 0
    + Passage de la gestion de la configuration du coût dans l'onglet coût
    + Relooking des erreurs pour les champs des formulaires
    + Choix du nombre de mois pour l'import des logs transposé dans l'onglet display-logs
    + Le choix min et max pour l'axe Y des puissances dans les logs se fait maintenant comme pour les autres axes directement dans l'onglet log
    + Ajout du parser php de wiki de Al
    + Prise en compte des sauts de ligne dans le calendar
    + Ajout des fonctions d'export au format csv pour les logs et les puissances
    + Les logs sont par défaut chargés sur les 31 derniers jours
    + Correction sur l'affichage des unités dans les graphes des programmes